compiler/test/parse-err/neg-vector.gr
// RUN: graphalg-translate --import-graphalg --verify-diagnostics %s

func NegVector(
    // expected-note@below{{operand has type Vector<s, int>}}
    a: Vector<s, int>) -> Vector<s, int> {
    // Negation only supports scalar inputs
    // expected-error@below{{negation is only supported for scalar types}}
    return -a;
}
